2005-04-25  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-get-posts-from-stored): Bugfix, added
	check to make sure that DELICIOUS-POSTS-LIST exists before
	searching it.

2005-04-21  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-add-tags): Fixed to keep the tag
	completion list updated after each post is made without having to
	talk to the server. 
	(delicious-complete-tags): Removed `delicious-tags-local', since
	we no longer maintain a separate local tags list.
	(delicious-build-tags-list): Removed `delicious-tags-local', since
	we no longer maintain a separate local tags list.

2005-04-21  John Sullivan  <john@wjsullivan.net>

	* planner-delicious.el: Added missing (provide).

2005-04-21  johnsu01  <john@wjsullivan.net>

	* delicioapi.el: Docstring fixes to pass checkdoc.

	* planner-delicious.el: Added copyright header information.

2005-04-21 johnsu01 <john@wjsullivan.net>

	* delicious.el: Numerous docstring fixes to pass checkdoc.

2005-03-31  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-load-posts-file): Fixed a problem that
	was preventing save-excursion from working. 
	(delicious-get-posts-from-stored): Filters stored posts by
	tag. Date is not yet working. 

	* readme: Documented `delicious-load-posts' and
	`delicious-save-posts'.
	
	* delicious.el (delicious-load-posts): Interactive command
	which Reads the contents of the posts file into
	`delicious-posts-list'.

2005-03-30  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-save-posts): New interactive command to
	save your posts to a file.

	* delicioapi.el (delicious-posts-file-name): New option for
	defining the file name in which your delicious posts will be saved.

2005-02-13  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-read-time-string): Corrected time-string
	prompt format.
	(delicious-suggest-tags): Added rudimentary handling of plurals,
	so that matches are suggested even if they are off by an 's' or